--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,5 @@ imgui.ini
 .code-workspace
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+.idea
+**/Icon*
