--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,6 +3,15 @@ name: Java CI
 on: [push]
 
 jobs:
+  formatting:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2 # v2 minimum required
+        - uses: axel-op/googlejavaformat-action@v3
+          with:
+            args: "--skip-sorting-imports --replace"
+            githubToken: ${{ secrets.GITHUB_TOKEN }}
+
   build:
 
     runs-on: ubuntu-latest
