check if job order affects protected check

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,14 +3,6 @@ name: Java CI
 on: [push]
 
 jobs:
-  formatting:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2 # v2 minimum required
-        - uses: axel-op/googlejavaformat-action@v3
-          with:
-            args: "--skip-sorting-imports --replace"
-            githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   build:
 
@@ -26,3 +18,17 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+  formatting:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2 # v2 minimum required
+        - name: Set up JDK
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.11
+        - uses: axel-op/googlejavaformat-action@v3
+          with:
+            args: "--skip-sorting-imports --replace"
+            githubToken: ${{ secrets.GITHUB_TOKEN }}
+
