--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,17 @@
     "**/.project": true,
     "**/.settings": true,
     "**/.factorypath": true
-  }
+  },
+  "java.test.config": [
+    {
+      "name": "WPIlibUnitTests",
+      "workingDirectory": "${workspaceFolder}/build/tmp/jniExtractDir",
+      "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/tmp/jniExtractDir" ],
+      "env": {
+        "LD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir",
+        "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir",
+        "PATH": "${env:PATH};build/tmp/jniExtractDir"
+      }
+    }
+  ]
 }
