--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,18 @@ deploy {
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+repositories {
+    mavenCentral()
+    mavenLocal()
+    jcenter()
+    flatDir {
+            // The directory lib is available as a source for dependencies - we put any JAR files here
+            // The directory lib will always be one folder "above" a subproject folder - thus the ".."
+            dirs '../lib'
+        }
+    maven { url 'https://jitpack.io' }
+}
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
@@ -52,8 +64,10 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    testImplementation 'junit:junit:4.12'
-
+	testImplementation(platform('org.junit:junit-bom:5.7.+'))
+	testImplementation('org.junit.jupiter:junit-jupiter:5.7.+')
+    testImplementation 'org.mockito:mockito-core:3.7.+'
+    
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
