--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
 	testImplementation(platform('org.junit:junit-bom:5.7.+'))
-	testImplementation('org.junit.jupiter:junit-jupiter:5.7.+')
+	testImplementation('org.junit.jupiter:junit-jupiter')
     testImplementation 'org.mockito:mockito-core:3.7.+'
     
     // Enable simulation gui support. Must check the box in vscode to enable support
